--- a/spinning/style.css
+++ b/spinning/style.css
@@ -145,13 +145,13 @@ img {
 }
 
 .light-box.active{ 
-    animation: activeBox 1s forwards linear; 
+    animation: activeBox 1.2s forwards linear; 
 } 
 
 
 .light-box{
     width: 90%;
-    position: absolute;
+    position: fixed;
     top: 0px;
     left: 0;
     right: 0;
@@ -160,7 +160,10 @@ img {
 }
 
 .box-close{
+    position: absolute;
     top: 10px;
     right: 0; 
     display: none;
+    background-color: #fff;
+    border-radius: 50%;
 }
